phpmyadmin/ingress/pma-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
  name: pma
  # namespace: foo
spec:
  rules:
    - host: 168.232.79.90
      http:
        paths:
          - backend:
              serviceName: pma-service
              servicePort: 80
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - 168.232.79.90
    secretName: pma-tls
